7. ListIterator [#350217 #289459]