@@ -14,9 +14,9 @@ public class ListUtilsTest {
 
     @Test
     public void whenRemoveIf() {
-        List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3));
-        List<Integer> exp = removeIf(list, x -> x == 1);
-        assertThat(exp, is(List.of(2, 3)));
+        List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3, 1, 1, 1));
+        removeIf(list, x -> x == 1);
+        assertThat(list, is(List.of(2, 3)));
     }
 
     @Test
@@ -42,15 +42,15 @@ public class ListUtilsTest {
     @Test
     public void whenReplaceIf() {
         List<Integer> list = new ArrayList<>(Arrays.asList(1, 1, 1, 2, 3));
-        List<Integer> exp = replaceIf(list, x -> x == 1, 0);
-        assertThat(exp, is(List.of(0, 0, 0, 2, 3)));
+        replaceIf(list, x -> x == 1, 0);
+        assertThat(list, is(List.of(0, 0, 0, 2, 3)));
     }
 
     @Test
     public void whenRemoveAll() {
-        List<Integer> list = new ArrayList<>(Arrays.asList(1, 1, 1, 1, 2, 3, 3, 2, 1, 4, 5, 6));
-        List<Integer> test = new ArrayList<>(Arrays.asList(4, 2, 3, 1));
-        List<Integer> exp = removeAll(list, test);
-        assertThat(exp, is(List.of(5, 6)));
+        List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 6, 1, 2, 3, 0));
+        List<Integer> test = new ArrayList<>(Arrays.asList(1, 3, 4, 2, 0));
+        removeAll(list, test);
+        assertThat(list, is(List.of(5, 6)));
     }
 }
